@@ -45,5 +45,9 @@ setup(name='lizard-krw',
       extras_require = {'test': tests_require},
       entry_points={
           'console_scripts': [
-          ]},
+            ],
+          'lizard_map.adapter_class': [
+            'adapter_krw = lizard_krw.layers:WorkspaceItemAdapterKrw',
+            ],
+          },
       )
