@@ -5,6 +5,8 @@ Changelog of lizard-krw
 0.9 (unreleased)
 ----------------
 
+- Added lizard_krw fixture.
+
 - Added template parameter to krw_browser.
 
 - Slightly changed layout of krw_browser.
